@@ -1,0 +1,1 @@
+- fix error handling for highscores files being empty
